# rustSideScroller

./: .gitignore  Cargo.toml  kv_store.json
datastore/: Cargo.toml  store.json
datastore/src/: kv_store.rs  lib.rs  main.rs
src/: main.rs
src/cli/: commands.rs  game_runner.rs  mod.rs
src/core/: game.rs  mod.rs  score.rs
src/game/: engine.rs  mod.rs  renderer.rs  score.rs
src/persistence/: file.rs  mod.rs
src/server/: game_server.rs  handlers.rs  mod.rs
src/store/: kv_store.rs  mod.rs  types.rs
src/ui/: input.rs  mod.rs  renderer.rs
