[package]
name = "side_scroller"
version = "0.1.0"
edition = "2021"

[dependencies]
simple_kv_store = { git = "https://github.com/woweow/kvstore.git", branch = "mainline" }
crossterm = "0.26"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
