[package]
name = "simple_kv_store"
version = "0.1.0"
edition = "2021"
description = "A simple key-value store implementation"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

[[bin]]
name = "kv"
path = "src/main.rs" 